Scripted to copy the room code in room.ejs

--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -26,6 +26,7 @@
 
                 <div class="buttons">
                     <div class="button outlined" id="room-id" data-id="<%= roomId %>">
+                        <input class="sr-only" type="" value="<%= roomId %>" id="copyCode">
                         #<%= roomId %>
                         <img src="/images/copy.svg" alt="Copiar número da sala" />
                     </div>
