--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -74,7 +74,7 @@ input, button, .button {
 .ball {
     width: 21.2rem;
     height: 21.2rem;
-    background: var(--blue);
+    background: var(--purple);
     clip-path: circle();
     opacity: 0.1;
 
