--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -92,3 +92,25 @@ input, button, .button {
     bottom: -15rem;
     right: 5.6rem;
 }
+
+/* ---------- RESPONSIVE */
+@media only screen and (max-width: 950px) {
+    
+    body,
+    .content {
+        display: initial;
+    }
+
+    main .container {
+        margin: 8rem auto;
+        padding: 0 12px;
+    }
+
+}
+
+@media only screen and (max-width: 950px) {
+    main .container {
+        margin: 0 auto;
+    }
+}
+
