--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -4,6 +4,7 @@
         <title>Rocket.q - Perguntas e Respostas</title>
 
         <meta charset="UTF-08">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link rel="stylesheet" href="/styles/global.css">
