Removed modal responsive code in room.css and added modal.css

--- a/public/styles/modal.css
+++ b/public/styles/modal.css
@@ -65,3 +65,18 @@
 }
 
 /* ---------- MODAL */
+
+@media only screen and (max-width: 480px) {
+    /* ---------- MODAL */
+    .modal-wrapper .modal {
+        padding: 64px 12px !important;
+    }
+
+    .modal-wrapper .modal input {
+        width: 80% !important;
+    }
+ 
+    button {
+        line-height: initial;
+    }
+}
